Added additional tasks to Nginx role to ensure firewall is correctly set up

--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -9,6 +9,17 @@
     notify:
       - Start Nginx
 
+  - name: Allow HTTPS Through Firewall
+    ufw:
+      rule: allow
+      name: Nginx Full
+
+  - name: Delete Redundant Nginx HTTP Rule
+    ufw:
+      rule: allow
+      name: Nginx HTTP
+      delete: yes
+
   - name: Remove Default Nginx Config
     file: dest=/etc/nginx/sites-enabled/default state=absent
     notify:
