Added variables to main Ansible file

--- a/ansible/ansible.yml
+++ b/ansible/ansible.yml
@@ -3,6 +3,11 @@
     become: yes
     become_user: root
     become_method: sudo
+
+    vars:
+      - domain: ci.example.com
+      - email: hello@example.com
+
     roles:
       - nginx
       - docker
