Added 'Stop Nginx' handler

--- a/ansible/roles/nginx/handlers/main.yml
+++ b/ansible/roles/nginx/handlers/main.yml
@@ -2,5 +2,8 @@
   - name: Start Nginx
     service: name=nginx state=started
 
+  - name: Stop Nginx
+    service: name=nginx state=stopped
+
   - name: Reload Nginx
     service: name=nginx state=reloaded
