--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -25,7 +25,13 @@
     notify:
       - Reload Nginx
 
+  - name: Check If Nginx Config Exists
+    stat:
+      path: /etc/nginx/sites-available/{{ domain }}
+    register: ngnix_config
+
   - name: Add Nginx Config
+    when: not ngnix_config.stat.exists
     template: src=default.j2 dest=/etc/nginx/sites-available/{{ domain }} owner=root group=root
 
   - name: Enable Nginx Config
